# cargo-template

./: Cargo.toml  README.md
src/: logger.rs  main.rs
