[package]
# name = "cargo-template"
version = "0.1.0"
# authors = ["Knair <knairwang@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
# async-trait = "*"
# chrono = "*"
flexi_logger = "*"
log = "*"
# rand = "*"

# tokio = { version = "1", features = ['full'] }

# actix-web = "*"
# actix-files = "*"
# mime = "*"
# serde = { version = "*", features = ["derive"] }
# serde_json = "*"
# uuid = { version = "*", features = ["serde", "v4"] }

# reqwest = { version = "*", features = ["json"] }
# base64 = "*"
# bytes = "*"
# url = "*"

# mongodb = "1"
# redis = { version = "*", features = ["aio"] }
# sonic-channel = { version = "*", features = ["search", "ingest", "control"] }
